--- a/backyard/index.html
+++ b/backyard/index.html
@@ -9,14 +9,14 @@
 <meta name="p:domain_verify" content="95814e27e3c1365c42657271e3571286"/>
 
 <!-- CSS Files -->
-<!--<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="css/font-awesome.min.css" rel="stylesheet">
 <link href="fonts/icon-7-stroke/css/pe-icon-7-stroke.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet" media="screen">
 <link href="css/owl.theme.css" rel="stylesheet">
 <link href="css/owl.carousel.css" rel="stylesheet">
 
-<!- Colors -->
+<!-- Colors -->
 <!--<link href="css/css-index.css" rel="stylesheet" media="screen">-->
 
 <!-- Google Fonts -->
@@ -276,13 +276,6 @@
 
 	<!-- optimise css for fast loading -->
 	<noscript id="deferred-styles">
-     
-<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-<link href="css/font-awesome.min.css" rel="stylesheet">
-<link href="fonts/icon-7-stroke/css/pe-icon-7-stroke.css" rel="stylesheet">
-<link href="css/animate.css" rel="stylesheet" media="screen">
-<link href="css/owl.theme.css" rel="stylesheet">
-<link href="css/owl.carousel.css" rel="stylesheet">
 
 <!-- Colors -->
 <link href="css/css-index.css" rel="stylesheet" media="screen">
@@ -292,7 +285,7 @@
 <link href='https://fonts.googleapis.com/css?family=Short+Stack' rel='stylesheet' type='text/css'>
     </noscript>
 
-    
+
     <script>
       var loadDeferredStyles = function() {
         var addStylesNode = document.getElementById("deferred-styles");
