--- a/backyard/index.html
+++ b/backyard/index.html
@@ -24,8 +24,8 @@
 <link href='https://fonts.googleapis.com/css?family=Short+Stack' rel='stylesheet' type='text/css'>-->
 
 <script type="text/javascript">var switchTo5x=true;</script>
-<script async type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
-<script async type="text/javascript" src="https://ss.sharethis.com/loader.js"></script>
+<script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript" src="https://ss.sharethis.com/loader.js"></script>
 
 
 
